--- a/lasttry.html
+++ b/lasttry.html
@@ -17,7 +17,7 @@
 
     var welcome = {
       type:jsPsychHtmlKeyboardResponse,
-      stimulus: 'Welcome to the experiment. Pree any key to begin.'
+      stimulus: 'Welcome to the experiment. Press any key to begin.'
     };
 
 
